added doctype header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,13 +24,14 @@
       <img class="ublogo-home" src="images/UBlogo.webp" />
 
       <nav class=right-bar>
-          <ul class="nav-links">
-            <a href="index.html"><button class="menu-btn">HOME</button></a>
-            <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
-            <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
-            <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
-            <a href="calendar.html"><button class="menu-btn">EVENTS</button></a>
-          </ul>      </nav>
+        <ul class="nav-links">
+          <a href="/"><button class="menu-btn">HOME</button></a>
+          <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
+          <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
+          <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
+          <a href="calendar.html"><button class="menu-btn">EVENTS</button></a>
+        </ul>
+      </nav>
 
       <div class="contact-btn-container">
         <a href="../contact-us.html" class="contact-us-btn">CONTACT US</a>
@@ -40,13 +42,14 @@
       </div>
     </div>
 
-      <div class="dropdown-menu">
-        <a href="index.html"><button class="dropdown-btn">HOME</button></a>
-        <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
-        <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
-        <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
-        <a href="calendar.html"><button class="dropdown-btn">EVENTS</button></a>
-      </div>    <div class="main-logo">
+    <div class="dropdown-menu">
+      <a href="/"><button class="dropdown-btn">HOME</button></a>
+      <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
+      <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
+      <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
+      <a href="calendar.html"><button class="dropdown-btn">EVENTS</button></a>
+    </div>
+    <div class="main-logo">
       <img class="ubsedslogo" src="images/sedslogo.png" />
     </div>
   </header>
