--- a/our-team.html
+++ b/our-team.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,7 +27,7 @@
 
         <nav class=right-bar>
           <ul class="nav-links">
-            <a href="../index.html"><button class="menu-btn">HOME</button></a>
+            <a href="..//"><button class="menu-btn">HOME</button></a>
             <a href="../our-team.html"><button class="menu-btn">OUR TEAM</button></a>
             <a href="../faqs.html"><button class="menu-btn">FAQS</button></a>
             <a href="../sponsors.html"><button class="menu-btn">SPONSORS</button></a>
@@ -45,7 +46,7 @@
       </div>
 
       <div class="dropdown-menu">
-        <a href="../index.html"><button class="dropdown-btn">HOME</button></a>
+        <a href="..//"><button class="dropdown-btn">HOME</button></a>
         <a href="../our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
         <a href="../faqs.html"><button class="dropdown-btn">FAQS</button></a>
         <a href="../sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
