--- a/subteams.html
+++ b/subteams.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,7 +25,7 @@
 
       <nav class=right-bar>
         <ul class="nav-links">
-          <a href="../index.html"><button class="menu-btn">HOME</button></a>
+          <a href="..//"><button class="menu-btn">HOME</button></a>
           <a href="../our-team.html"><button class="menu-btn">OUR TEAM</button></a>
           <a href="../faqs.html"><button class="menu-btn">FAQS</button></a>
           <a href="../sponsors.html"><button class="menu-btn">SPONSORS</button></a>
@@ -43,7 +44,7 @@
     </div>
 
     <div class="dropdown-menu">
-      <a href="../index.html"><button class="dropdown-btn">HOME</button></a>
+      <a href="..//"><button class="dropdown-btn">HOME</button></a>
       <a href="../our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
       <a href="../faqs.html"><button class="dropdown-btn">FAQS</button></a>
       <a href="../sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
@@ -99,12 +100,12 @@
       </div>
     </div>
     <!-- <div class="card-home-subteampage grid-col-span3"
-      style="background-image: url(../subteamcardimages/structures.png);">
-      <div class="card-content">
-        <h2 class="subteam-card-title">PAYLOAD</h2>
-        <a href="structures.html"><button class="card-btn">Learn More</button></a>
-      </div>
-    </div> -->
+        style="background-image: url(../subteamcardimages/structures.png);">
+        <div class="card-content">
+          <h2 class="subteam-card-title">PAYLOAD</h2>
+          <a href="structures.html"><button class="card-btn">Learn More</button></a>
+        </div>
+      </div> -->
   </div>
 
 
@@ -123,3 +124,5 @@
   </footer>
 
 </body>
+
+</html>
