--- a/thank-you.html
+++ b/thank-you.html
@@ -24,7 +24,7 @@
 
       <nav class="right-bar">
         <ul class="nav-links">
-          <a href="index.html"><button class="menu-btn">HOME</button></a>
+          <a href="/"><button class="menu-btn">HOME</button></a>
           <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
           <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
           <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="dropdown-menu">
-      <a href="index.html"><button class="dropdown-btn">HOME</button></a>
+      <a href="/"><button class="dropdown-btn">HOME</button></a>
       <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
       <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
       <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="thank-you-actions">
-          <a href="index.html" class="btn-primary">
+          <a href="/" class="btn-primary">
             <i class="fa-solid fa-home"></i>
             Back to Home
           </a>
@@ -144,7 +144,7 @@
 
     // Optional: Auto-redirect after a certain time
     // setTimeout(() => {
-    //   window.location.href = 'index.html';
+    //   window.location.href = '/';
     // }, 10000); // Redirect to home after 10 seconds
   </script>
 </body>
