--- a/sponsors.html
+++ b/sponsors.html
@@ -1,118 +1,102 @@
-<html lang="en"></html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UB Rocketry</title>
-    <link rel="stylesheet" href="../style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UB Rocketry</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+
   <body>
-    <body>
-      <header class="header-container">
-        <div class="nav-bar">
-          <img class="sedslogo-corner" src="../images/ubsedslogo.webp" />
-  
-          <nav class = right-bar>
-            <ul class="nav-links">
-              <a href="../index.html"><button class="menu-btn">HOME</button></a>
-              <a href="../our-team.html"
-                ><button class="menu-btn">OUR TEAM</button></a
-              >
-              <a href="../faqs.html"
-                ><button class="menu-btn">FAQS</button></a
-              >
-              <a href="../sponsors.html"
-                ><button class="menu-btn">SPONSORS</button></a
-              >
-              <a href="../calendar.html"
-                ><button class="menu-btn">EVENTS</button></a
-              >
-            </ul>
-            
-          </nav>
+    <header class="header-container">
+      <div class="nav-bar">
+        <img class="sedslogo-corner" src="../images/ubsedslogo.webp" />
 
-          <div class = "contact-btn-container">
-          <a href="../contact-us.html" class="contact-us-btn">CONTACT US</a>
-        </div>
-  
-          <div class="toggle-btn">
-            <i class="fa-solid fa-bars"></i>
-          </div>
-        </div>
-  
-        <div class="dropdown-menu">
-          <a href="index.html"><button class="dropdown-btn">HOME</button></a>
-          <a href="../our-team.html"
-            ><button class="dropdown-btn">OUR TEAM</button></a
-          >
-          <a href="../faqs.html"
-            ><button class="dropdown-btn">FAQS</button></a
-          >
-          <a href="../sponsors.html"
-            ><button class="dropdown-btn">SPONSORS</button></a
-          >
-          <a href="../calendar.html"
-            ><button class="dropdown-btn">EVENTS</button></a
-          >
-        </div>
-  
-        
-      </header>
+        <nav class=right-bar>
+          <ul class="nav-links">
+            <a href="/"><button class="menu-btn">HOME</button></a>
+            <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
+            <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
+            <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
+            <a href="calendar.html"><button class="menu-btn">EVENTS</button></a>
+          </ul>
 
-      <script>
-        const toggleBtn = document.querySelector(".toggle-btn");
-        const toggleBtnIcon = document.querySelector(".toggle-btn i");
-        const dropDownMenu = document.querySelector(".dropdown-menu");
-  
-        toggleBtn.onclick = function () {
-          dropDownMenu.classList.toggle("open");
-          const isOpen = dropDownMenu.classList.contains("open");
-  
-          toggleBtnIcon.classList = isOpen
-            ? "fa-solid fa-xmark"
-            : "fa-solid fa-bars";
-        };
-      </script>
-       <main>
-        <div class="sponsors-heading">
-            <h1>Thank you to our Sponsors!</h1>
+        </nav>
+
+        <div class="contact-btn-container">
+          <a href="contact-us.html" class="contact-us-btn">CONTACT US</a>
         </div>
-        <div class="sponsor-container">
-            <img src="images/sponsorlogos/ansys.png" class="sponsor-img" alt="ANSYS">
-            <img src="images/sponsorlogos/altium-logo.png" class="sponsor-img" alt="Altium">
-            <img src="images/sponsorlogos/Moog-Logo.png" class="sponsor-img" alt="Moog">
-            <img src="images/sponsorlogos/safran.png" class="sponsor-img" alt="Safran">
-            <img src="images/sponsorlogos/kulite.png" class="sponsor-img" alt="Kulite">
-            <img src="images/sponsorlogos/L3Harris_Logo.png" class="sponsor-img" alt="L3Harris">
+
+        <div class="toggle-btn">
+          <i class="fa-solid fa-bars"></i>
         </div>
-      </main>
-      <footer>
-        <div class="footer-container">
-          <div>
-            <p class="copyright-text">Copyright &copy; 2025</p>
-          </div>  
-          <div class="footer-logo-container">
-            <a href="https://www.instagram.com/ub.seds/"><i class="logo-test fa-brands fa-instagram fa-2x" style="color: #edeff3;"></i></a>
-            <a href="https://www.youtube.com/@UBRocketry"><i class="logo-test fa-brands fa-youtube fa-2x" style="color: #edeff3;"></i></a>
-          </div>
+      </div>
+
+      <div class="dropdown-menu">
+        <a href="/"><button class="dropdown-btn">HOME</button></a>
+        <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
+        <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
+        <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
+        <a href="calendar.html"><button class="dropdown-btn">EVENTS</button></a>
+      </div>
+
+
+    </header>
+
+    <script>
+      const toggleBtn = document.querySelector(".toggle-btn");
+      const toggleBtnIcon = document.querySelector(".toggle-btn i");
+      const dropDownMenu = document.querySelector(".dropdown-menu");
+
+      toggleBtn.onclick = function () {
+        dropDownMenu.classList.toggle("open");
+        const isOpen = dropDownMenu.classList.contains("open");
+
+        toggleBtnIcon.classList = isOpen
+          ? "fa-solid fa-xmark"
+          : "fa-solid fa-bars";
+      };
+    </script>
+    <main>
+      <div class="sponsors-heading">
+        <h1>Thank you to our Sponsors!</h1>
+      </div>
+      <div class="sponsor-container">
+        <img src="images/sponsorlogos/ansys.png" class="sponsor-img" alt="ANSYS">
+        <img src="images/sponsorlogos/altium-logo.png" class="sponsor-img" alt="Altium">
+        <img src="images/sponsorlogos/Moog-Logo.png" class="sponsor-img" alt="Moog">
+        <img src="images/sponsorlogos/safran.png" class="sponsor-img" alt="Safran">
+        <img src="images/sponsorlogos/kulite.png" class="sponsor-img" alt="Kulite">
+        <img src="images/sponsorlogos/L3Harris_Logo.png" class="sponsor-img" alt="L3Harris">
+      </div>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <div>
+          <p class="copyright-text">Copyright &copy; 2025</p>
         </div>
-      </footer>
+        <div class="footer-logo-container">
+          <a href="https://www.instagram.com/ub.seds/"><i class="logo-test fa-brands fa-instagram fa-2x"
+              style="color: #edeff3;"></i></a>
+          <a href="https://www.youtube.com/@UBRocketry"><i class="logo-test fa-brands fa-youtube fa-2x"
+              style="color: #edeff3;"></i></a>
+        </div>
+      </div>
+    </footer>
 
   </body>
+
 </html>
