--- a/our-team.html
+++ b/our-team.html
@@ -27,11 +27,11 @@
 
         <nav class=right-bar>
           <ul class="nav-links">
-            <a href="..//"><button class="menu-btn">HOME</button></a>
-            <a href="../our-team.html"><button class="menu-btn">OUR TEAM</button></a>
-            <a href="../faqs.html"><button class="menu-btn">FAQS</button></a>
-            <a href="../sponsors.html"><button class="menu-btn">SPONSORS</button></a>
-            <a href="../calendar.html"><button class="menu-btn">EVENTS</button></a>
+            <a href="/"><button class="menu-btn">HOME</button></a>
+            <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
+            <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
+            <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
+            <a href="calendar.html"><button class="menu-btn">EVENTS</button></a>
           </ul>
 
         </nav>
@@ -46,11 +46,11 @@
       </div>
 
       <div class="dropdown-menu">
-        <a href="..//"><button class="dropdown-btn">HOME</button></a>
-        <a href="../our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
-        <a href="../faqs.html"><button class="dropdown-btn">FAQS</button></a>
-        <a href="../sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
-        <a href="../calendar.html"><button class="dropdown-btn">EVENTS</button></a>
+        <a href="/"><button class="dropdown-btn">HOME</button></a>
+        <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
+        <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
+        <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
+        <a href="calendar.html"><button class="dropdown-btn">EVENTS</button></a>
       </div>
 
 
