--- a/rocketry.html
+++ b/rocketry.html
@@ -25,16 +25,16 @@
 
             <nav class="right-bar">
                 <ul class="nav-links">
-                    <a href="..//"><button class="menu-btn">HOME</button></a>
-                    <a href="../our-team.html"><button class="menu-btn">OUR TEAM</button></a>
-                    <a href="../faqs.html"><button class="menu-btn">FAQS</button></a>
-                    <a href="../sponsors.html"><button class="menu-btn">SPONSORS</button></a>
-                    <a href="../calendar.html"><button class="menu-btn">EVENTS</button></a>
+                    <a href="/"><button class="menu-btn">HOME</button></a>
+                    <a href="our-team.html"><button class="menu-btn">OUR TEAM</button></a>
+                    <a href="faqs.html"><button class="menu-btn">FAQS</button></a>
+                    <a href="sponsors.html"><button class="menu-btn">SPONSORS</button></a>
+                    <a href="calendar.html"><button class="menu-btn">EVENTS</button></a>
                 </ul>
             </nav>
 
             <div class="contact-btn-container">
-                <a href="../contact-us.html" class="contact-us-btn">CONTACT US</a>
+                <a href="contact-us.html" class="contact-us-btn">CONTACT US</a>
             </div>
 
             <div class="toggle-btn">
@@ -43,11 +43,11 @@
         </div>
 
         <div class="dropdown-menu">
-            <a href="..//"><button class="dropdown-btn">HOME</button></a>
-            <a href="../our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
-            <a href="../faqs.html"><button class="dropdown-btn">FAQS</button></a>
-            <a href="../sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
-            <a href="../calendar.html"><button class="dropdown-btn">EVENTS</button></a>
+            <a href="/"><button class="dropdown-btn">HOME</button></a>
+            <a href="our-team.html"><button class="dropdown-btn">OUR TEAM</button></a>
+            <a href="faqs.html"><button class="dropdown-btn">FAQS</button></a>
+            <a href="sponsors.html"><button class="dropdown-btn">SPONSORS</button></a>
+            <a href="calendar.html"><button class="dropdown-btn">EVENTS</button></a>
         </div>
     </header>
 
