--- a/subteams/structures.html
+++ b/subteams/structures.html
@@ -27,7 +27,7 @@
 
         <nav class=right-bar>
           <ul class="nav-links">
-            <a href="..//"><button class="menu-btn">HOME</button></a>
+            <a href="../"><button class="menu-btn">HOME</button></a>
             <a href="../our-team.html"><button class="menu-btn">OUR TEAM</button></a>
             <a href="../faqs.html"><button class="menu-btn">FAQS</button></a>
             <a href="../sponsors.html"><button class="menu-btn">SPONSORS</button></a>
